# PSL

./: CMakeLists.txt  PSLConfig.cmake.in  README.md  build.bat  build.sh
cmake/: target_options.cmake
include/psl/: arena.h  ast.h  lexer.h  parser.h  psl.h
scripts/: perfect_hash_finder.py
src/: CMakeLists.txt  arena.c  ast.c  dll_main.c  lexer.c
tests/: CMakeLists.txt  test_ast.c  test_lexer.c
tests_data/: example.psl
